--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3": "^7.9.0",
     "d3-sankey": "^0.12.3",
     "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "lucide-react": "^0.509.0",
     "next": "14.1.0",
     "papaparse": "^5.5.2",
